使用sequelize-typescript連接兩表
